mongo-app/mongo-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
  namespace: mongo-dev
  labels:
    app: mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo
        ports:
        - containerPort: 27017
