mongo-app/mongo-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db-statefulset
  namespace: mongo-dev
  labels:
    app: mongo-db

spec:
  serviceName: mongo-headless

  selector:
    matchLabels:
      app: mongo-db

  template:
    metadata:
      labels:
        app: mongo-db

    spec:
      containers:
        - name: mongo-db
          image: mongo
          ports:
            - containerPort: 27017

          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"

          volumeMounts:
            - name: mongo-db-volume
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-db-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
