mongo-app/mongo-db-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: mongo-dev
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - port: 27017
