mongo-app/mongo-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
  namespace: mongo-dev
spec:
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
