mongo-app/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-Service
  namespace: mongo-dev

spec:
  #type: LoadBalancer
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      #nodePort: 30000
